[gd_scene load_steps=4 format=3 uid="uid://bae55p0tdb4ok"]

[ext_resource type="Script" path="res://scripts/ai-components/Pathfind.gd" id="1_xiww1"]
[ext_resource type="Script" path="res://scripts/ai-components/MasterComponentAI.gd" id="2_m1xum"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yt18q"]
size = Vector2(1506, 892)

[node name="StarterAIContent" type="Node2D"]

[node name="AIComponentList" type="Node" parent="."]

[node name="MasterComponentAI" type="Node" parent="AIComponentList"]
script = ExtResource("2_m1xum")

[node name="Pathfind" type="Node" parent="AIComponentList"]
script = ExtResource("1_xiww1")
component_type = 1

[node name="PlayerView" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerView"]
shape = SubResource("RectangleShape2D_yt18q")
metadata/_edit_lock_ = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
path_desired_distance = 100.0
target_desired_distance = 100.0
path_postprocessing = 1

[node name="Label" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = -102.0
offset_top = -153.0
offset_right = 163.0
offset_bottom = 100.0

[node name="PathfindProcess" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3

[connection signal="body_entered" from="PlayerView" to="AIComponentList/MasterComponentAI" method="_view_entered"]
[connection signal="body_exited" from="PlayerView" to="AIComponentList/MasterComponentAI" method="_view_exited"]
